--- a/index.html
+++ b/index.html
@@ -58,44 +58,46 @@
               <span class="author-block">
                 <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Haoning Wu</a><sup>1*</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Zicheng Zhang</a><sup>*</sup>,</span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Zicheng Zhang</a><sup>2*</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Weixia Zhang</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Weixia Zhang</a><sup>2</sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Chaofeng Chen</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Chaofeng Chen</a><sup>1</sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Chunyi Li</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Chunyi Li</a><sup>2</sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Liang Liao</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Liang Liao</a><sup>1</sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Annan Wang</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Annan Wang</a><sup>1</sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Erli Zhang</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Erli Zhang</a><sup>1</sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Wenxiu Sun</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Wenxiu Sun</a><sup>3</sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Qiong Yan</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Qiong Yan</a><sup>3</sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Xiongkuo Min</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Xiongkuo Min</a><sup>2</sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Guangtai Zhai</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Guangtai Zhai</a><sup>2&#10013</sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Weisi Lin</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Weisi Lin</a><sup>1&#10013</sup>,
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
+                    <span class="author-block"><sup>1</sup>Nanyang Technological University</span>
+                    <span class="author-block"><sup>2</sup>Shanghai Jiao Tong University</span>
+                    <span class="author-block"><sup>3</sup>Sensetime Research</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
 
