--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Haoning Wu</a><sup>1*</sup>,</span>
+                <a href="https://github.com/teowu" target="_blank">Haoning Wu</a><sup>1*</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Zicheng Zhang</a><sup>2*</sup>,</span>
+                  <a href="https://github.com/zzc-1998" target="_blank">Zicheng Zhang</a><sup>2*</sup>,</span>
                   <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Weixia Zhang</a><sup>2</sup>,
                   </span>
@@ -98,7 +98,7 @@
                     <span class="author-block"><sup>1</sup>Nanyang Technological University</span>
                     <span class="author-block"><sup>2</sup>Shanghai Jiao Tong University</span>
                     <span class="author-block"><sup>3</sup>Sensetime Research</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Equal Contribution<sup>&#10013</sup>Corresponding Authors</small></span>
                   </div>
 
                   <div class="column has-text-centered">
