--- a/index.html
+++ b/index.html
@@ -183,6 +183,28 @@
 <!-- End paper abstract -->
 
 
+<!-- Teaser -->
+  <section class="hero is-small is-light">
+    <div class="hero-body">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-three-fifths">
+          <h5 class="title">Illustration of DepictQA</h5>
+          <div class="content has-text-justified">
+            <p>
+              DepictQA first <strong><em>identifies the distortions </em></strong>,
+              then <strong><em>weighs the influences</em></strong> of different distortions to the texture damages,
+              and finally <strong><em>obtains the comparison conclusion</em></strong>
+              that are better aligned with human judgments than score-based IQA methods.
+            </p>
+          </div>
+          <img src="static/images/radar.png" , width="1000" />
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
 <!-- Image carousel -->
 <section class="hero is-small">
   <div class="hero-body">
