--- a/index.html
+++ b/index.html
@@ -191,10 +191,9 @@
           <h5 class="title">Illustration of DepictQA</h5>
           <div class="content has-text-justified">
             <p>
-              DepictQA first <strong><em>identifies the distortions </em></strong>,
-              then <strong><em>weighs the influences</em></strong> of different distortions to the texture damages,
-              and finally <strong><em>obtains the comparison conclusion</em></strong>
-              that are better aligned with human judgments than score-based IQA methods.
+              Comparison between \<strong><em>Q-Align</em></strong> and existing state-of-the-art visual assessors, 
+              showing exceptional performance especially on <strong><em>cross-set</em></strong> settings. 
+              Metrics are the average of SRCC and PLCC. 
             </p>
           </div>
           <img src="static/images/radar.png" , width="1000" />
