--- a/index.html
+++ b/index.html
@@ -188,15 +188,15 @@
     <div class="hero-body">
       <div class="columns is-centered has-text-centered">
         <div class="column is-three-fifths">
-          <h5 class="title">Illustration of DepictQA</h5>
+          <h5 class="title">Perfromance of <strong><em>Q-Align</em></strong></h5>
           <div class="content has-text-justified">
             <p>
-              Comparison between \<strong><em>Q-Align</em></strong> and existing state-of-the-art visual assessors, 
+              Comparison between <strong><em>Q-Align</em></strong> and existing state-of-the-art visual assessors, 
               showing exceptional performance especially on <strong><em>cross-set</em></strong> settings. 
               Metrics are the average of SRCC and PLCC. 
             </p>
           </div>
-          <img src="static/images/radar.png" , width="1000" />
+          <img src="static/images/radar.png" , width="600" />
         </div>
       </div>
     </div>
