--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <section class="hero is-small is-light">
     <div class="hero-body">
       <div class="columns is-centered has-text-centered">
-        <div class="column is-three-fifths">
+        <div class="column is-four-fifths">
           <h5 class="title">Perfromance of <strong><em>Q-Align</em></strong></h5>
           <div class="content has-text-justified">
             <p>
@@ -196,7 +196,7 @@
               Metrics are the average of SRCC and PLCC. 
             </p>
           </div>
-          <img src="static/images/radar.png" , width="600" />
+          <img src="static/images/tmp_radar.png" , width="600" />
         </div>
       </div>
     </div>
