--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
             In our experiments, we demonstrate the advantage of the discrete-level-based syllabus over direct-score-based variants for LMMs.
           </p>
         </div>
+        <img src="static/images/tmp_radar.png" , width="600" />
       </div>
     </div>
   </div>
@@ -187,7 +188,7 @@
   <section class="hero is-small is-light">
     <div class="hero-body">
       <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
+        <div class="column is-three-fifths">
           <h5 class="title">Perfromance of <strong><em>Q-Align</em></strong></h5>
           <div class="content has-text-justified">
             <p>
