--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                       <span class="icon">
                         <i class="fas fa-file-pdf"></i>
                       </span>
-                      <span>Huggingface</span>
+                      <span>HF</span>
                     </a>
                   </span>
 
