--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                       </a>
                     </span>
 
-                    <!-- Supplementary PDF link -->
+                    <!-- huggingface -->
                     <span class="link-block">
-                      <a href="static/pdfs/supplementary_material.pdf" target="_blank"
+                      <a href="https://huggingface.co/q-future/one-align" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="fas fa-file-pdf"></i>
