--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                       <a href="https://huggingface.co/q-future/one-align" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
-                        <i class="fas fa-file-pdf"></i>
+                        <i class="fa-solid fa-face-smiling-hands"></i>
                       </span>
                       <span>HF</span>
                     </a>
