--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <div class="hero-body">
       <div class="columns is-centered has-text-centered">
         <div class="column is-three-fifths">
-          <h5 class="title">Structure/h5>
+          <h5 class="title">Structure</h5>
           <div class="content has-text-justified">
             <p>
               The model structure of the Q-Align reduces tokens per image to 64 through the visual abstractor, effectively unifying images and videos (as sequences of images) under one general structure. This approach allows for a streamlined and efficient processing of both static images and dynamic video content within the same framework.
