--- a/index.html
+++ b/index.html
@@ -174,6 +174,45 @@
 </section>
 <!-- End paper abstract -->
 
+  <!-- Image carousel -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+       <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/iqares.png" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          Results on Image Quality Assessment (IQA).
+        </h2>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/iaares.png" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          Results on Image Aesthetic Assessment (IAA).
+        </h2>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/vqares.png" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+         Results on Video Quality Assessment (VQA).
+       </h2>
+     </div>
+     <div class="item">
+      <!-- Your image here -->
+      <img src="static/images/onealignres.png" alt="MY ALT TEXT"/>
+      <h2 class="subtitle has-text-centered">
+        Results of <strong>OneAlign</strong> in unifying IQA, IAA and VQA.
+      </h2>
+    </div>
+  </div>
+</div>
+</div>
+</section>
+<!-- End image carousel -->
+
   
 <!-- Teaser -->
   <section class="hero is-small is-light">
