--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Xiongkuo Min</a><sup>2</sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Guangtai Zhai</a><sup>2#</sup>,
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Guangtao Zhai</a><sup>2#</sup>,
                   </span>
                   <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Weisi Lin</a><sup>1#</sup>,
@@ -280,11 +280,11 @@
       <h2 class="title">BibTeX</h2>
       <pre><code>@article{wu2023qalign,
   title={Q-Align: Teaching LMMs for Visual Scoring via Discrete Text-Defined Levels},
-  author={Wu, Haoning and Zhang, Zicheng and Zhang, Weixia and Chen, Chaofeng and Li, Chunyi and Liao, Liang and Wang, Annan and Zhang, Erli and Sun, Wenxiu and Yan, Qiong and Min, Xiongkuo and Zhai, Guangtai and Lin, Weisi},
+  author={Wu, Haoning and Zhang, Zicheng and Zhang, Weixia and Chen, Chaofeng and Li, Chunyi and Liao, Liang and Wang, Annan and Zhang, Erli and Sun, Wenxiu and Yan, Qiong and Min, Xiongkuo and Zhai, Guangtao and Lin, Weisi},
   journal={arXiv preprint arXiv:2312.xxxxx},
   year={2023},
   institution={Nanyang Technological University and Shanghai Jiao Tong University and Sensetime Research},
-  note={Equal Contribution by Wu, Haoning and Zhang, Zicheng. Corresponding Authors: Zhai, Guangtai and Lin, Weisi.}
+  note={Equal Contribution by Wu, Haoning and Zhang, Zicheng. Corresponding Authors: Zhai, Guangtao and Lin, Weisi.}
 }
 </code></pre>
     </div>
