--- a/index.html
+++ b/index.html
@@ -54,45 +54,50 @@
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">Q-Align: Teaching LMMs for Visual Scoring via Discrete Text-Defined Levels</h1>
             <div class="is-size-5 publication-authors">
-              <!-- Paper authors -->
-              <span class="author-block">
-                <a href="https://github.com/teowu" target="_blank">Haoning Wu</a><sup>1*+</sup>,</span>
-                <span class="author-block">
-                  <a href="https://github.com/zzc-1998" target="_blank">Zicheng Zhang</a><sup>2*</sup>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Weixia Zhang</a><sup>2</sup>,
-                  </span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Chaofeng Chen</a><sup>1</sup>,
-                  </span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Chunyi Li</a><sup>2</sup>,
-                  </span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Liang Liao</a><sup>1</sup>,
-                  </span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Annan Wang</a><sup>1</sup>,
-                  </span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Erli Zhang</a><sup>1</sup>,
-                  </span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Wenxiu Sun</a><sup>3</sup>,
-                  </span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Qiong Yan</a><sup>3</sup>,
-                  </span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Xiongkuo Min</a><sup>2</sup>,
-                  </span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Guangtao Zhai</a><sup>2#</sup>,
-                  </span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Weisi Lin</a><sup>1#</sup>,
-                  </span>
-                  </div>
+<!-- Paper authors -->
+<span class="author-block">
+  <a href="https://teowu.github.io" target="_blank">Haoning Wu</a><sup>1*+</sup>,
+</span>
+<span class="author-block">
+  <a href="https://github.com/zzc-1998" target="_blank">Zicheng Zhang</a><sup>2*</sup>,
+</span>
+<span class="author-block">
+  <a href="https://sites.google.com/view/r-panda" target="_blank">Weixia Zhang</a><sup>2</sup>,
+</span>
+<span class="author-block">
+  <a href="https://chaofengc.github.io" target="_blank">Chaofeng Chen</a><sup>1</sup>,
+</span>
+<span class="author-block">
+  <a href="https://liaoliang92.github.io" target="_blank">Liang Liao</a><sup>1</sup>,
+</span>
+<span class="author-block">
+  <a href="https://github.com/lcysyzxdxc" target="_blank">Chunyi Li</a><sup>2</sup>,
+</span>
+<span class="author-block">
+  <a href="https://github.com/YixuanGao98" target="_blank">Yixuan Gao</a><sup>2</sup>,
+</span>
+<span class="author-block">
+  <a href="https://github.com/AnnanWangDaniel" target="_blank">Annan Wang</a><sup>1</sup>,
+</span>
+<span class="author-block">
+  <a href="https://github.com/ZhangErliCarl/" target="_blank">Erli Zhang</a><sup>1</sup>,
+</span>
+<span class="author-block">
+  <a href="https://wenxiusun.com" target="_blank">Wenxiu Sun</a><sup>3</sup>,
+</span>
+<span class="author-block">
+  <a href="https://scholar.google.com/citations?user=uT9CtPYAAAAJ&hl=en" target="_blank">Qiong Yan</a><sup>3</sup>,
+</span>
+<span class="author-block">
+  <a href="https://sites.google.com/site/minxiongkuo/" target="_blank">Xiongkuo Min</a><sup>2</sup>,
+</span>
+<span class="author-block">
+  <a href="https://ee.sjtu.edu.cn/en/FacultyDetail.aspx?id=24&infoid=153&flag=153" target="_blank">Guangtao Zhai</a><sup>2#</sup>,
+</span>
+<span class="author-block">
+  <a href="https://personal.ntu.edu.sg/wslin/Home.html" target="_blank">Weisi Lin</a><sup>1#</sup>,
+</span>
+</div>
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block"><sup>1</sup>Nanyang Technological University</span>
