--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
-                        <span>Paper</span>
+                        <span>Technical Report (Coming Soon)</span>
                       </a>
                     </span>
 
@@ -148,7 +148,7 @@
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv</span>
+                  <span>arXiv (Coming Soon)</span>
                 </a>
               </span>
             </div>
