--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href="https://q-future.github.io/Q-Align/fig/Q_Align_v0_1_preview.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
-                        <span>Technical Report (Coming Soon)</span>
+                        <span>Technical Report</span>
                       </a>
                     </span>
 
@@ -179,44 +179,20 @@
 </section>
 <!-- End paper abstract -->
 
-  <!-- Image carousel -->
-<section class="hero is-small">
+  <!-- Paper poster -->
+<section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/iqares.png" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Results on Image Quality Assessment (IQA).
-        </h2>
+      <h2 class="title">Technical Report</h2>
+
+      <iframe  src="https://q-future.github.io/Q-Align/fig/Q_Align_v0_1_preview.pdf" width="100%" height="550">
+          </iframe>
+        
       </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/iaares.png" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Results on Image Aesthetic Assessment (IAA).
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/vqares.png" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-         Results on Video Quality Assessment (VQA).
-       </h2>
-     </div>
-     <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/onealignres.png" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Results of <strong>OneAlign</strong> in unifying IQA, IAA and VQA.
-      </h2>
     </div>
-  </div>
-</div>
-</div>
-</section>
-<!-- End image carousel -->
+  </section>
+
+
 
   
 <!-- Teaser -->
@@ -277,7 +253,44 @@
     </div>
   </section>
 
-
+  <!-- Image carousel -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+       <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/iqares.png" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          Results on Image Quality Assessment (IQA).
+        </h2>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/iaares.png" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          Results on Image Aesthetic Assessment (IAA).
+        </h2>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/vqares.png" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+         Results on Video Quality Assessment (VQA).
+       </h2>
+     </div>
+     <div class="item">
+      <!-- Your image here -->
+      <img src="static/images/onealignres.png" alt="MY ALT TEXT"/>
+      <h2 class="subtitle has-text-centered">
+        Results of <strong>OneAlign</strong> in unifying IQA, IAA and VQA.
+      </h2>
+    </div>
+  </div>
+</div>
+</div>
+</section>
+<!-- End image carousel -->
 
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
