--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2312.17090>" target="_blank"
+                  <a href="https://arxiv.org/abs/2312.17090" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
