--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                       <span class="icon">
                         <i class="fas fa-smile"></i>
                       </span>
-                      <span>OneAlign (HF)</span>
+                      <span>OneAlign (HF Model)</span>
                     </a>
                   </span>
 
@@ -142,6 +142,17 @@
                     <span>Code</span>
                   </a>
                 </span>
+
+                <!-- huggingface -->
+                    <span class="link-block">
+                      <a href="https://huggingface.co/spaces/teowu/OneScorer" target="_blank"
+                      class="external-link button is-normal is-rounded is-dark">
+                      <span class="icon">
+                        <i class="fas fa-smile"></i>
+                      </span>
+                      <span>Demo</span>
+                    </a>
+                  </span>
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
